refactor(payment): build and read the Mercado Pago points with Jackson
The point search answers in two shapes — a paged envelope, or the point itself
at the top level — and the adapter reads both. hasResults keeps that condition
in one place instead of repeating the paging null checks at each caller.

The recovery path stays as it was: a 4xx whose body says the external id is
already assigned is not a failure here, it is a search away from the id we
wanted. That is why the client still hands back the raw body of an error
response rather than deserializing it.