@@ -1,7 +1,8 @@
 package dev.kalles.payment.adapter.out.mercadopago;
 
-import com.google.gson.JsonObject;
-import com.google.gson.JsonParser;
+import dev.kalles.payment.adapter.out.mercadopago.dto.PointCreateRequest;
+import dev.kalles.payment.adapter.out.mercadopago.dto.PointResponse;
+import dev.kalles.payment.adapter.out.mercadopago.dto.PointSearchResponse;
 import dev.kalles.payment.application.port.out.PaymentPointPort;
 import dev.kalles.payment.domain.PaymentPoint;
 import dev.kalles.payment.domain.PaymentPointDescriptor;
@@ -11,10 +12,10 @@ import dev.kalles.payment.domain.PaymentStore;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Component;
+import tools.jackson.databind.ObjectMapper;
 
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 
@@ -23,13 +24,16 @@ public class MercadoPagoPaymentPointAdapter implements PaymentPointPort {
 
     private final MercadoPagoCredentialsResolver credentialsResolver;
     private final MercadoPagoWebClient mercadoPagoWebClient;
+    private final ObjectMapper objectMapper;
 
     public MercadoPagoPaymentPointAdapter(
             MercadoPagoCredentialsResolver credentialsResolver,
-            MercadoPagoWebClient mercadoPagoWebClient
+            MercadoPagoWebClient mercadoPagoWebClient,
+            ObjectMapper objectMapper
     ) {
         this.credentialsResolver = credentialsResolver;
         this.mercadoPagoWebClient = mercadoPagoWebClient;
+        this.objectMapper = objectMapper;
     }
 
     @Override
@@ -50,23 +54,24 @@ public class MercadoPagoPaymentPointAdapter implements PaymentPointPort {
         }
 
         String extId = point.externalReference() != null ? point.externalReference().trim() : "";
-        Long existingPosId = searchPosId(extId, token);
+        String existingPosId = searchPosId(extId, token);
         if (existingPosId != null) {
-            return point.withProviderPointId(String.valueOf(existingPosId));
+            return point.withProviderPointId(existingPosId);
         }
 
-        JsonObject payload = new JsonObject();
-        payload.addProperty("name", descriptor.description() + " - " + descriptor.code());
-        payload.addProperty("fixed_amount", false);
-        payload.addProperty("store_id", Long.valueOf(store.providerStoreId()));
-        payload.addProperty("external_store_id", store.externalReference());
-        payload.addProperty("external_id", extId);
+        PointCreateRequest payload = new PointCreateRequest(
+                descriptor.description() + " - " + descriptor.code(),
+                false,
+                Long.valueOf(store.providerStoreId()),
+                store.externalReference(),
+                extId
+        );
 
         try {
             ResponseEntity<String> response = mercadoPagoWebClient.exchange(
                     HttpMethod.POST,
                     "https://api.mercadopago.com/pos",
-                    payload.toString(),
+                    objectMapper.writeValueAsString(payload),
                     Map.of(
                             "Authorization", "Bearer " + token,
                             "Content-Type", "application/json; charset=UTF-8"
@@ -76,21 +81,21 @@ public class MercadoPagoPaymentPointAdapter implements PaymentPointPort {
             if (!response.getStatusCode().is2xxSuccessful()) {
                 String responseBody = response.getBody();
                 if (responseBody != null && responseBody.contains("is already assigned")) {
-                    Long fallbackPosId = searchPosId(extId, token);
+                    String fallbackPosId = searchPosId(extId, token);
                     if (fallbackPosId != null) {
-                        return point.withProviderPointId(String.valueOf(fallbackPosId));
+                        return point.withProviderPointId(fallbackPosId);
                     }
                 }
                 throw new MercadoPagoAdapterException("Fail to create MP POS. HTTP Status: "
                         + response.getStatusCode().value() + " - " + responseBody);
             }
 
-            JsonObject responseJson = JsonParser.parseString(response.getBody()).getAsJsonObject();
-            if (!responseJson.has("id")) {
+            PointResponse createdPoint = objectMapper.readValue(response.getBody(), PointResponse.class);
+            if (createdPoint.id() == null) {
                 throw new MercadoPagoAdapterException("SDK returned POS without id");
             }
 
-            return point.withProviderPointId(String.valueOf(responseJson.get("id").getAsLong()));
+            return point.withProviderPointId(createdPoint.id());
         } catch (Exception e) {
             throw new MercadoPagoAdapterException("Fail to create MP POS: " + e.getMessage(), e);
         }
@@ -112,36 +117,31 @@ public class MercadoPagoPaymentPointAdapter implements PaymentPointPort {
                 return List.of();
             }
 
-            JsonObject json = JsonParser.parseString(response.getBody()).getAsJsonObject();
-            if (!json.has("paging") || json.get("paging").getAsJsonObject().get("total").getAsInt() <= 0) {
+            PointSearchResponse searchResponse = objectMapper.readValue(response.getBody(), PointSearchResponse.class);
+            if (!searchResponse.hasResults()) {
                 return List.of();
             }
 
-            List<PaymentPointView> points = new ArrayList<>();
-            json.get("results").getAsJsonArray().forEach(element -> {
-                JsonObject pointObj = element.getAsJsonObject();
-                points.add(new PaymentPointView(
-                        pointObj.has("id") ? pointObj.get("id").getAsString() : null,
-                        getAsString(pointObj, "name"),
-                        getAsString(pointObj, "store_id"),
-                        getAsString(pointObj, "external_id"),
-                        getAsString(pointObj, "external_store_id"),
-                        pointObj.has("fixed_amount") && !pointObj.get("fixed_amount").isJsonNull()
-                                ? pointObj.get("fixed_amount").getAsBoolean()
-                                : null,
-                        getAsString(pointObj, "status"),
-                        getAsString(pointObj, "date_created"),
-                        getAsString(pointObj, "date_last_updated"),
-                        Map.of()
-                ));
-            });
-            return points;
+            return searchResponse.results().stream()
+                    .map(point -> new PaymentPointView(
+                            point.id(),
+                            point.name(),
+                            point.storeId(),
+                            point.externalId(),
+                            point.externalStoreId(),
+                            point.fixedAmount(),
+                            point.status(),
+                            point.dateCreated(),
+                            point.dateLastUpdated(),
+                            Map.of()
+                    ))
+                    .toList();
         } catch (Exception e) {
             return List.of();
         }
     }
 
-    private Long searchPosId(String externalId, String token) {
+    private String searchPosId(String externalId, String token) {
         try {
             ResponseEntity<String> response = mercadoPagoWebClient.exchange(
                     HttpMethod.GET,
@@ -154,22 +154,13 @@ public class MercadoPagoPaymentPointAdapter implements PaymentPointPort {
                 return null;
             }
 
-            JsonObject searchJson = JsonParser.parseString(response.getBody()).getAsJsonObject();
-            if (searchJson.has("paging") && searchJson.get("paging").getAsJsonObject().get("total").getAsInt() > 0) {
-                return searchJson.get("results").getAsJsonArray().get(0).getAsJsonObject().get("id").getAsLong();
+            PointSearchResponse searchResponse = objectMapper.readValue(response.getBody(), PointSearchResponse.class);
+            if (searchResponse.hasResults()) {
+                return searchResponse.results().getFirst().id();
             }
-            if (searchJson.has("id")) {
-                return searchJson.get("id").getAsLong();
-            }
-            return null;
+            return searchResponse.id();
         } catch (Exception e) {
             return null;
         }
-    }
-
-    private String getAsString(JsonObject jsonObject, String memberName) {
-        return jsonObject.has(memberName) && !jsonObject.get(memberName).isJsonNull()
-                ? jsonObject.get(memberName).getAsString()
-                : null;
     }
 }
